fixed spacings

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ i{
     font-size: 2rem;
 }
 
+.minheight{
+    min-height: 80vh;
+}
+
 .shorty{
   border-top: 1px solid white;
   border-bottom: 1px solid gray;
